<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="Fichatech">Mi Aplicación</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_technical_data">Ficha Técnica</string>
    <string name="nav_technical_data_list">Lista de canales</string>
    <string name="nav_stage_plan">Planta de Escenario</string>
    <string name="nav_stage_plan_escenario">Escenario</string>
    <string name="nav_documents">Documentos</string>
    <string name="nav_saved_documents">Documentos Guardados</string>
    <string name="nav_task_list">Listado de Tareas</string>
    <string name="nav_settings">Ajustes</string>
    <string name="nav_exit">Salir</string>
    <string name="nav_tuner">Afinador Cromático</string>
    <string name="nav_sonometro">Sonómetro</string>
    <string name="nav_record_playback">Grabadora de audio</string>
    <string name="nav_ayuda">Manual y Ayuda</string>
    <string name="nav_group_principal">Principal</string>
    <string name="nav_group_tools">Herramientas</string>
    <string name="nav_group_more">Más opciones</string>
    <string name="welcome_title">Bienvenido a Fichatech</string>
    <string name="welcome_question">¿Qué te gustaría hacer?</string>
    <string name="channel_lists">Listas de canales</string>
    <string name="stage_plans">Plantas de escenario</string>
    <string name="audio_monitor">Monitor de audio</string>
    <string name="app_title">FICHATECH</string>
    <string name="app_subtitle">Con tecnología opus</string>
    <string name="logo_description">Logo FICHATECH</string>
    <string name="about_title">Bienvenido a FICHATECH</string>
    <string name="about_description">FICHATECH es una app diseñada para técnicos de sonido, bandas y solistas que tiene como objetivo hacer crecer tus proyectos.</string>
    <string name="features_title">Funciones principales</string>
    <string name="btn_channels">Lista de Canales</string>
    <string name="btn_stage_plan">Planta de Escenario</string>
    <string name="btn_audio_monitor">Monitor de Audio</string>
    <string name="news_title">Últimas Novedades</string>
    <string name="news_date">13/Enero/2026</string>
    <string name="news_content">• Nuevo diseño minimalista\n• Nueva función monitor server\n• Corrección de errores menores</string>
    <string name="developer_title">Mas información en</string>
    <string name="developer_url">www.cepalabs.cl/fichatech</string>
    <string name="developer_description">Desarrollo de aplicaciones moviles, paginas web, servicio de sonido y producción musical.</string>
    <string name="btn_website">Sitio Web</string>
    <string name="btn_instagram">Instagram</string>
    <string name="fab_description">Generador de ruido</string>
    <string name="action_info">Información</string>
    <string name="menu_privacy_policy">Política de Privacidad</string>
    <string name="menu_terms_conditions">Términos y Condiciones</string>
    <string name="menu_about">Acerca de</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="nav_grabacion">Grabación</string>
    <string name="frequency_text">Frecuencia: %.2f Hz</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="note_c">Nota Do</string>
    <string name="note_c_sharp">Nota Do#</string>
    <string name="note_d">Nota Re</string>
    <string name="note_d_sharp">Nota Re#</string>
    <string name="note_e">Nota Mi</string>
    <string name="note_f">Nota Fa</string>
    <string name="note_f_sharp">Nota Fa#</string>
    <string name="note_g">Nota Sol</string>
    <string name="note_g_sharp">Nota Sol#</string>
    <string name="note_a">Nota La</string>
    <string name="note_a_sharp">Nota La#</string>
    <string name="note_b">Nota Si</string>
    <string name="default_web_client_id">270188212529-vmj2cio1922veiv6r7t9n7b8boo1e6lk.apps.googleusercontent.com</string>
    <string name="db_value">dB: %.2f</string>
    <string name="instrument_icon">Icono del instrumento</string>
    <string name="add_instrument">Agregar instrumento</string>
    <string name="category_icon">Icono de categoría</string>
    <string name="select_category">Selecciona una categoría</string>
    <string name="select_instrument">Selecciona un instrumento</string>
    <string name="scene_icon">Icono de planta</string>
    <string name="select_scene">Seleccionar planta</string>
    <string name="delete_scene">Eliminar</string>
    <string name="scene_name">Nombre de la planta</string>
    <string name="scene_save_info">Ingresa un nombre único para guardar tu configuración de planta</string>
    <string name="documento_name_label">Nombre del Documento</string>
    <string name="documento_description_label">Descripción del Documento</string>
    <string name="documento_date_label">Fecha de Creación</string>
</resources>