<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    android:background="@drawable/img_ampligtra"
    app:cardCornerRadius="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/botonesnegrosyblancos"
        android:padding="16dp">
        <CheckBox
            android:id="@+id/checkBoxDocumento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNombreDocumento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/documento_name_label"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvDescripcionDocumento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/documento_description_label"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
               />
            <TextView
                android:id="@+id/tvFechaDocumento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/documento_date_label"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                 />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
